--- a/psets/ps3/homework3/Makefile
+++ b/psets/ps3/homework3/Makefile
@@ -1,18 +1,13 @@
 CC := clang
 
+CFLAGS := -Wall -std=gnu99
 EXTRA_CFLAGS ?=
-CFLAGS := -Wall -std=gnu99 -g
+LDFLAGS := # -lrt
 
 ifeq ($(DEBUG),1)
   CFLAGS += -O0
 else
   CFLAGS += -O3 -DNDEBUG
-endif
-
-ifeq ($(VECTORIZE),1)
-  CFLAGS += -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -ffast-math
-else
-  CFLAGS += -fno-vectorize
 endif
 
 ifeq ($(ASSEMBLE),1)
@@ -23,9 +18,19 @@ ifeq ($(AVX2),1)
   CFLAGS += -mavx2
 endif
 
-CFLAGS += $(EXTRA_CFLAGS)
+ifeq ($(RELEASE),0)
+  CFLAGS += -g -gdwarf-3      # easier debugging
+  CFLAGS += -fno-unroll-loops # turn-off loop unrolling
+endif
 
-LDFLAGS := -lrt
+ifeq ($(VECTORIZE),1)
+  CFLAGS += -Rpass=loop-vectorize -Rpass-missed=loop-vectorize \
+            -Rpass-analysis=loop-vectorize -ffast-math
+else
+  CFLAGS += -fno-vectorize
+endif
+
+CFLAGS += $(EXTRA_CFLAGS)
 
 # You shouldn't need to touch this.  This keeps track of whether or
 # not you've changed CFLAGS.
@@ -44,5 +49,5 @@ all: loop
 loop: loop.o
 	$(CC) -o loop $^ $(LDFLAGS)
 
-clean::
+clean:
 	rm -f loop *.o *.s .cflags perf.data */perf.data
